<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NogiFeed</string>
    <string name="action_about">About this app</string>
    <string name="action_settings">Settings</string>
    <string name="action_news">News</string>

    <!-- activity settings -->
    <string name="setting_enable_blog_notification_key">pref_key_blog_updated_notification_enable</string>
    <string name="setting_enable_blog_notification_restriction_key">pref_key_blog_updated_notification_restriction_enable</string>

    <string name="setting_enable_news_notification_key">pref_key_news_updated_notification_enable</string>
    <string name="setting_enable_news_notification_restriction_key">pref_key_news_updated_notification_restriction_enable</string>

    <string name="setting_enable_thumbnail_download_key">pref_key_thumbnail_download_enable</string>

    <!-- Blog -->
    <string name="setting_category_title_notification">Notification</string>
    <string name="setting_title_notification">Blog Update Notification</string>
    <string name="setting_summary_notification">Receive blog update notification</string>

    <string name="setting_title_notification_restriction">Blog Update Notification Restriction</string>
    <string name="setting_summary_notification_restriction">Receive blog update notification only fav members</string>
    <!-- News -->
    <string name="setting_title_notification_blog">News Update Notification</string>
    <string name="setting_summary_notification_blog">Receive news update notification</string>
    <!-- TODO -->
    <string name="setting_title_notification_restriction_blog">Blog Update Notification Restriction</string>
    <string name="setting_summary_notification_restriction_blog">Receive blog update notification only fav members</string>
    <!-- Download -->
    <string name="setting_category_title_download">Download</string>
    <string name="setting_title_download_thumbnail">Download Thumbnail Image</string>
    <string name="setting_summary_download_thumbnail">Download Thumbnail Image</string>

    <!-- activity all members -->
    <string name="failed_get_all_members">Failed to get all members. Check your network state.</string>

    <!-- activity blog -->
    <string name="action_download">Download all image</string>
    <string name="toast_start_download">Start download images</string>
    <string name="toast_finish_download">Finish download images</string>
    <string name="toast_failed_download">Failed to download images</string>

    <string name="notify_start_download_ticker">Start download images</string>
    <string name="notify_start_download_title">Downloading</string>
    <string name="notify_start_download_text">Downloading</string>

    <string name="notify_failed_download_ticker">Failed to download</string>
    <string name="notify_failed_download_title">Failed to download</string>
    <string name="notify_failed_download_text">Failed to download</string>

    <string name="notify_finish_download_ticker">Complete download images</string>
    <string name="notify_finish_download_title">Complete download images</string>
    <string name="notify_finish_download_text">Complete download images</string>

    <string name="dialog_confirm_download_title">Download Image</string>
    <string name="dialog_confirm_download_message">do you want to download image?</string>

    <string name="toast_download_complete">Complete download image</string>

    <!-- activity about -->
    <string name="about_header_app_summary">"This application is for read Nogizaka46's blog. (this app is 'un'official.) Inquiry to me (Twitter @nogifeed), If you have question or feature request about this application."</string>
    <string name="about_header_developer_title">This application developer</string>
    <string name="about_header_developer_name">\@shts_dev</string>

    <string name="about_item_share">Recommend this app</string>
    <string name="about_item_rate">Rate this app</string>
    <string name="about_item_mention">Inquiry this app</string>

    <string name="feed_failure">Failed to get feed. Check your network state.</string>

    <string name="empty_favorite">You have not favorite member. you check favorite at member detail page</string>

    <!-- member detail -->
    <string name="property_name_birthday">Birthday : %1$s</string>
    <string name="property_name_birthplace">BirthPlace : %1$s</string>
    <string name="property_name_blood_type">BloodType : %1$s</string>
    <string name="property_name_constellation">Constellation : %1$s</string>
    <string name="property_name_height">Height : %1$s</string>

    <!-- news -->
    <string name="news_category_media">Media</string>
    <string name="news_category_event">Event</string>
    <string name="news_category_release">Release</string>
    <string name="news_category_other">Others</string>

    <string-array name="news_category_array">
        <item>@string/news_category_media</item>
        <item>@string/news_category_event</item>
        <item>@string/news_category_release</item>
        <item>@string/news_category_other</item>
    </string-array>
    <string-array name="news_category_array_value">
        <item>@string/news_category_media</item>
        <item>@string/news_category_event</item>
        <item>@string/news_category_release</item>
        <item>@string/news_category_other</item>
    </string-array>

    <string name="news_filter_dialog_title">Filter by category</string>
    <string name="news_filter_dialog_ok">Update</string>
    <string name="news_filter_dialog_cancel">Cancel</string>

    <string name="failed_to_get_news">Failed to get news. Please check your network</string>

    <!-- navigation menu -->
    <string name="nav_menu_all_feed">All Feed</string>
    <string name="nav_menu_favorite_member_feed">Favorite Member Feed</string>
    <string name="nav_menu_all_member">All Member</string>
    <string name="nav_menu_news">News</string>
    <string name="nav_menu_calender">Calender</string>
    <string name="nav_menu_settings">Settings</string>

    <string name="nav_menu_request">Request</string>
    <string name="nav_menu_about_app">About This App</string>
    <string name="nav_menu_licenses">Open Source License</string>

    <!-- fragment member grid  -->
    <string name="choose_member">Choose Favorite Member</string>
    <string name="already_set_same_widget">Already set same member</string>

    <!-- fragment blog  -->
    <string name="permission_require_dialog_message">Need to permission</string>
    <string name="no_download_image">This blog does not have images</string>
    <string name="recomend_download_thumbnail">All raw image expiration</string>
    <string name="downloading_image">Now Downloading …</string>
    <string name="download_image">Download all images</string>
    <string name="download_finish">Finish Download</string>
    <string name="confirm">Confirm</string>
    <string name="failed_to_download">Failed to download. Please check your network</string>
    <string name="no_permission_download">Cannot download images because of have not permission</string>

    <!-- fragment detail member -->
    <string name="registered_favorite_member">Registered Member</string>
    <string name="unregistered_favorite_member">Unregistered Member</string>

    <!-- widget chooser -->
    <string name="select_widget_title">Select Member</string>

    <!-- TODO:翻訳 -->
    <!-- fragment request -->
    <string name="request_hint">ご意見・ご要望をお聞かせください</string>
    <string name="request_send_button">NogiFeedに意見を送る</string>

</resources>
