<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_category_title_notification"
        >
        <CheckBoxPreference
            android:key="@string/setting_enable_notification_key"
            android:title="@string/setting_title_notification"
            android:summary="@string/setting_summary_notification"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="@string/setting_enable_notification_restriction_key"
            android:title="@string/setting_title_notification_restriction"
            android:summary="@string/setting_summary_notification_restriction"
            android:defaultValue="false"
            />
    </PreferenceCategory>
</PreferenceScreen>