<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:padding="16dp"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="24dp"
        android:text="@string/about_header_app_summary"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@id/about_text"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/developerIconView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/kensyusei" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:text="@string/about_header_developer_title"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:text="@string/about_header_developer_name"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
